--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "@nuxtjs/auth-next": "^5.0.0-1624817847.21691f1",
     "@nuxtjs/axios": "^5.12.2",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7",
-    "nuxt-tailvue": "^1.0.10"
+    "nuxt": "^2.15.7"
   },
   "devDependencies": {
     "@jamesacarr/eslint-formatter-github-actions": "^0.1.0",
