Upgraded packages and enabled new login screen

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,8 @@
       "@nuxt/types",
       "@nuxtjs/axios",
       "@nuxtjs/auth-next",
+      "nuxt-tailvue",
+      "@nuxtjs/color-mode",
     ]
   },
   "exclude": [
