--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
     "@nuxtjs/axios": "^5.12.2",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
+    "nuxt-tailvue": "^1.0.95",
+    "tv-button": "1.0.25",
+    "tv-modal": "1.0.22",
     "vue-clickaway": "^2.2.2"
   },
   "devDependencies": {
     "@jamesacarr/eslint-formatter-github-actions": "^0.1.0",
     "@nuxt/types": "^2.15.7",
     "@nuxt/typescript-build": "^2.1.0",
+    "@nuxtjs/color-mode": "^2.1.1",
     "@nuxtjs/composition-api": "^0.24.7",
     "@nuxtjs/eslint-config": "^6.0.0",
     "@nuxtjs/eslint-config-typescript": "^6.0.0",
