--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "jest --config tests/js/jest.config.js",
     "api": "php artisan serve",
     "seed": "php artisan migrate:fresh --seed",
-    "caches": "php artisan config:cache; php artisan route:cache; php artisan cache:clear; php artisan event:clear;"
+    "caches": "php artisan config:cache && php artisan route:cache && php artisan cache:clear && php artisan event:clear"
   },
   "dependencies": {
     "@nuxtjs/auth-next": "^5.0.0-1624817847.21691f1",
@@ -31,13 +31,15 @@
     "@nuxt/types": "^2.15.7",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/color-mode": "^2.1.1",
-    "@nuxtjs/composition-api": "^0.24.7",
+    "@nuxtjs/composition-api": "^0.29.3",
     "@nuxtjs/eslint-config": "^6.0.0",
     "@nuxtjs/eslint-config-typescript": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/tailwindcss": "^4.2.0",
     "@types/vue-clickaway": "^2.2.0",
+    "@vue/runtime-dom": "^3.2.20",
     "@vue/test-utils": "^1.1.0",
+    "@vueuse/core": "^6.7.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.5.0",
@@ -48,6 +50,7 @@
     "nuxt-typed-vuex": "^0.2.0",
     "postcss": "^8.3.11",
     "ts-jest": "^27.0.7",
+    "unplugin-auto-import": "^0.4.13",
     "vue-jest": "^3.0.4"
   }
 }
