--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,7 @@
       "@nuxtjs/auth-next",
       "nuxt-tailvue",
       "@nuxtjs/color-mode",
+      "unplugin-vue2-script-setup/types",
     ]
   },
   "exclude": [
