--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,9 @@
       "unplugin-vue2-script-setup/types",
     ]
   },
+  "vueCompilerOptions": {
+    "experimentalCompatMode": 2
+  },
   "exclude": [
     "node_modules"
   ]
