Added dayjs nuxt plugin and added logic for cards with destory() method

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,7 @@
       "nuxt-tailvue",
       "@nuxtjs/color-mode",
       "unplugin-vue2-script-setup/types",
+      "@nuxtjs/dayjs",
     ]
   },
   "vueCompilerOptions": {
