--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@nuxtjs/auth-next": "^5.0.0-1624817847.21691f1",
     "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/dayjs": "^1.4.1",
+    "@tiptap/starter-kit": "^2.0.0-beta.132",
+    "@tiptap/vue-2": "^2.0.0-beta.62",
     "core-js": "^3.19.0",
     "nuxt": "^2.15.8",
     "nuxt-tailvue": "^1.0.95",
