--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@nuxtjs/auth-next": "^5.0.0-1624817847.21691f1",
     "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/dayjs": "^1.4.1",
+    "@tailwindcss/forms": "^0.3.4",
+    "@tailwindcss/typography": "^0.4.1",
     "@tiptap/extension-highlight": "^2.0.0-beta.27",
     "@tiptap/extension-typography": "^2.0.0-beta.17",
     "@tiptap/starter-kit": "^2.0.0-beta.132",
