--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
     },
     "types": [
       "@types/node",
+      "@types/components",
       "@nuxt/types",
       "@nuxtjs/axios",
       "@nuxtjs/auth-next",
