--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate",
+    "dev": "nuxi dev",
+    "build": "nuxi build",
+    "start": "nuxi start",
+    "generate": "nuxi generate",
     "lint": "yarn lint:js",
     "lint:js": "eslint --ext .ts,.js,.vue --ignore-path .gitignore .",
     "lint:action": "yarn lint:js -f @jamesacarr/github-actions",
@@ -21,7 +21,7 @@
     "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/dayjs": "^1.4.1",
     "core-js": "^3.20.0",
-    "nuxt": "^2.15.8",
+    "nuxt-edge": "latest",
     "nuxt-tailvue": "^1.0.95",
     "tv-button": "1.0.25",
     "tv-modal": "1.0.24",
@@ -29,16 +29,15 @@
   },
   "devDependencies": {
     "@jamesacarr/eslint-formatter-github-actions": "^0.1.0",
+    "@nuxt/bridge": "npm:@nuxt/bridge-edge",
     "@nuxt/types": "^2.15.8",
-    "@nuxt/typescript-build": "^2.1.0",
-    "@nuxtjs/color-mode": "^2.1.1",
-    "@nuxtjs/composition-api": "^0.31.0",
     "@nuxtjs/eslint-config": "^7.0.0",
     "@nuxtjs/eslint-config-typescript": "^7.0.2",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/tailwindcss": "^4.2.0",
+    "@types/node": "^17.0.4",
     "@types/vue-clickaway": "^2.2.0",
-    "@vue/runtime-dom": "^3.2.21",
+    "@vue/runtime-dom": "^3.2.26",
     "@vue/test-utils": "^1.2.2",
     "@vueuse/core": "^6.7.4",
     "babel-core": "7.0.0-bridge.0",
