--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nuxtjs/dayjs": "^1.4.1",
     "@tailwindcss/forms": "^0.3.4",
     "@tailwindcss/typography": "^0.4.1",
+    "@tiptap/extension-code-block-lowlight": "^2.0.0-beta.62",
     "@tiptap/extension-highlight": "^2.0.0-beta.27",
     "@tiptap/extension-typography": "^2.0.0-beta.17",
     "@tiptap/starter-kit": "^2.0.0-beta.132",
